# -WIMU-Data-poisoning

./: .gitignore  .gitmodules  Makefile  README.md  clap.py  pyproject.toml  requirements.txt
.github/workflows/: linter-pipeline.yml
src/MusicGen/: musicgen_small.py  musicgen_small_gen.py
wimudp/MusicGen/: musicgen_small.py
wimudp/data-poisoning/MusicGen/: musicgen_small.py
wimudp/data-poisoning/analysis/: audiocaps_info.py
wimudp/data-poisoning/dirty-label-attack/: dirty-label-analysis.ipynb
wimudp/data-poisoning/finetuning/: data_script.py  train.csv
wimudp/data_poisoning/: generate_dirty_label.py  generate_dity_label.py  generate_nightshade.py  script.py  utils.py
wimudp/data_poisoning/dirty_label/: audio_loader.py  audiocaps_filter.py  dataset_filter.py  label_mismatcher.py  query_audioldm.py  utils.py
wimudp/data_poisoning/finetuning/: finetuning_notebook.ipynb
wimudp/data_poisoning/nightshade/: audioldm_prompter.py  clap.py  data_extractor.py  nightshade_notebook.ipynb  pipeline.py  poison_generator.py  query_audioldm.py  vocoder.py
wimudp/watermarking/: run.py  run_notebook.ipynb  watermark_notebook.ipynb
wimudp/watermarking/audio/detection/: watermark_detector.py
wimudp/watermarking/audio/generation/: audio_generator.py  watermark_generator.py
wimudp/watermarking/audio/utils/: audio_downloader.py  audio_plots.py  audio_utils.py
wimudp/watermarking/models/: audioseal.py  musicgen.py
wimudp/watermarking/models/audio_gen/: audioldm_model.py  base_model.py  musicgen_model.py
wimudp/watermarking/models/watermark_gen/: audioseal.py
(+1 files in other folders)
