[tool.poetry]
name = "wimudp"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.46.1"
torch = "^2.5.1"
peft = "^0.13.2"
soundfile = "^0.12.1"
librosa = "0.9.2"
matplotlib = "3.7"
audioseal = "^0.1.4"
torchaudio = "^2.5.1"
audioldm = "^0.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
