[tool.poetry]
name = "wimudp"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.46.3"
peft = "^0.13.2"
soundfile = "^0.12.1"
librosa = "0.9.2"
matplotlib = "3.7"
audioseal = "^0.1.4"
audioldm = "^0.1.1"
torch = {version = "^2.5.1+cu121", source = "pytorch-gpu"}
torchvision = {version = "^0.20.1+cu121", source = "pytorch-gpu"}
torchaudio = {version = "^2.5.1+cu121", source = "pytorch-gpu"}

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pylint = "^3.3.1"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
